--- a/app/views/fights/new.html.haml
+++ b/app/views/fights/new.html.haml
@@ -1,19 +1,3 @@
-= form_with model: @fight, url: fights_path do |form|
-  .field
-    = form.label :character1_id, "Select the first character"
-    = form.collection_select :character1_id, @characters, :id, :name, prompt: "Select a character"
+%h1 New fight
 
-  .field
-    = form.label :weapon1_id, "Select the first weapon"
-    = form.collection_select :weapon1_id, @weapons, :id, :name, prompt: "Select a weapon"
-
-  .field
-    = form.label :character2_id, "Select the second character"
-    = form.collection_select :character2_id, @characters, :id, :name, prompt: "Select a character"
-
-  .field
-    = form.label :weapon2_id, "Select the second weapon"
-    = form.collection_select :weapon2_id, @weapons, :id, :name, prompt: "Select a weapon"
-
-  .actions
-    = form.submit "Initiate Fight"
+= render 'form'
