--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,25 +1,6 @@
 %h1 Listing characters
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th Life points
-      %th Attack points
-      %th
-      %th
-      %th
 
-  %tbody
-    - @characters.each do |character|
-      %tr
-        %td= character.name
-        %td= character.life_points
-        %td= character.attack_points
-        %td= link_to 'Show', character
-        %td= link_to 'Edit', edit_character_path(character)
-        %td= link_to 'Destroy', character, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
+= render @characters
 
 = link_to 'New Character', new_character_path
