--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,6 +1,10 @@
-%h1 Listing characters
+%div{class: 'bg-slate-800 min-h-screen py-8'}
+  %h1{class:'text-4xl my-4 text-white text-center'}🛡 Listing characters 🛡
+
+  %div{class: 'container mx-auto flex flex-wrap justify-center items-center gap-8 my-12'}
+    = render @characters
+    = link_to new_character_path, class: '' do
+      %div{class: 'bg-gradient-to-br from-indigo-600 to-blue-500 text-white rounded-lg shadow p-8 w-32 h-32 flex items-center justify-center transition-transform transform hover:scale-105 hover:-translate-y-1'}
+        %span{class: 'text-4xl font-bold text-center'}New +
 
 
-= render @characters
-
-= link_to 'New Character', new_character_path
