--- a/app/views/fights/_form.html.haml
+++ b/app/views/fights/_form.html.haml
@@ -1,26 +1,27 @@
-= form_with model: @fight, url: fights_path do |form|
+= form_with model: @fight, url: fights_path, class: 'flex flex-col items-center space-y-8' do |form|
   - if @fight.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@fight.errors.count, "error")} prohibited this fight from being saved:"
+    %div{ class: 'bg-red-100 border-l-4 border-red-500 text-red-700 p-4 mb-6 w-1/2 rounded' }
+      %h2{ class: 'font-bold mb-2' }= "#{pluralize(@fight.errors.count, "error")} prohibited this fight from being saved:"
       %ul
         - @fight.errors.full_messages.each do |message|
           %li= message
 
-  .field
-    = form.label :character1_id, "Select the first character"
-    = form.collection_select :character1_id, @characters, :id, :name, prompt: "Select a character"
+  %div{ class: 'flex w-full justify-between items-center space-x-16 text-gray-900' }
+    %div{ class: 'bg-gradient-to-r from-emerald-500 to-emerald-300 p-10 rounded shadow-lg w-1/3 transform hover:scale-110 transition-transform' } 
+      = form.label :character1_id, "First Character", class: 'block text-lg font-semibold mb-3'
+      = form.collection_select :character1_id, @characters, :id, :name, { prompt: "Select a character" }, class: 'w-full border rounded p-2 mb-6'
 
-  .field
-    = form.label :weapon1_id, "Select the first weapon"
-    = form.collection_select :weapon1_id, @weapons, :id, :name, prompt: "Select a weapon"
+      = form.label :weapon1_id, "Weapon", class: 'block text-lg font-semibold mb-3'
+      = form.collection_select :weapon1_id, @weapons, :id, :name, { prompt: "Select a weapon" }, class: 'w-full border rounded p-2'
 
-  .field
-    = form.label :character2_id, "Select the second character"
-    = form.collection_select :character2_id, @characters, :id, :name, prompt: "Select a character"
+    %div{class: 'text-9xl font-extrabold text-white'}
+      ⚔️
 
-  .field
-    = form.label :weapon2_id, "Select the second weapon"
-    = form.collection_select :weapon2_id, @weapons, :id, :name, prompt: "Select a weapon"
+    %div{ class: 'bg-gradient-to-r from-fuchsia-300 to-fuchsia-500 p-10 rounded shadow-lg w-1/3 transform hover:scale-110 transition-transform' } 
+      = form.label :character2_id, "Second Character", class: 'block text-lg font-semibold mb-3'
+      = form.collection_select :character2_id, @characters, :id, :name, { prompt: "Select a character" }, class: 'w-full border rounded p-2 mb-6'
 
-  .actions
-    = form.submit "Initiate Fight"
+      = form.label :weapon2_id, "Weapon", class: 'block text-lg font-semibold mb-3'
+      = form.collection_select :weapon2_id, @weapons, :id, :name, { prompt: "Select a weapon" }, class: 'w-full border rounded p-2'
+
+  = form.submit "Fight !", class: 'bg-purple-600 hover:bg-purple-700 text-white font-bold py-6 px-24 rounded-full text-3xl mt-8 transform hover:scale-110 transition-transform'
