--- a/app/views/fights/show.html.haml
+++ b/app/views/fights/show.html.haml
@@ -1,23 +1,34 @@
-%h1 Fight Details
+%div{class: 'rounded-2xl bg-gradient-to-br from-cyan-700 to-blue-800 flex flex-col justify-center items-center text-white space-y-8 p-12'}
+  %div{class: 'text-7xl font-bold animate-bounce my-4'}
+    %span{class: ''}🎉
+    = @fight.winner.name
+    %span{class: 'text-red-500'} won!
+    %span{class: ''}🎉
 
-%p
-  %strong Character 1:
-  = @character1.name
+  %div{class: 'w-full md:w-3/4 xl:w-1/2 bg-slate-700 p-12 rounded-lg shadow-xl space-y-4 text-center'}
+    %div{class: 'text-2xl mb-4 border-b border-slate-600 pb-2'}
+      Fight Details
 
-%p
-  %strong Character 2:
-  = @character2.name
+    %p{class: 'flex justify-between items-center font-bold'}
+      %span Character 1
+      = @character1.name
+    %p{class: 'flex justify-between items-center font-bold'}
+      %span Character 2
+      = @character2.name
 
-%p
-  %strong Weapon 1:
-  = @weapon1 ? @weapon1.name : "No weapon"
+    %p{class: 'flex justify-between items-center'}
+      %span Weapon 1
+      = @weapon1 ? @weapon1.name : "🤚 No weapon"
 
-%p
-  %strong Weapon 2:
-  = @weapon2 ? @weapon2.name : "No weapon"
+    %p{class: 'flex justify-between items-center'}
+      %span Weapon 2
+      = @weapon2 ? @weapon2.name : "🤚 No weapon"
 
-%p
-  %strong Winner:
-  = @winner ? @winner.name : "It's a tie!"
+    %p{class: 'flex justify-between items-center text-xl mt-4 font-bold'}
+      %span Winner
+      = @winner ? @winner.name : "🤝 It's a tie!"
 
-= link_to 'Back to Home', root_path
+%div{class: 'flex space-x-4 mt-6'}
+  = link_to 'Back to Home', root_path, class: 'bg-blue-500 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
+  = link_to 'Fight Again', new_fight_path, class: 'bg-purple-500 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
+  = link_to 'Fight History', fights_path, class: 'bg-violet-200 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
