--- a/app/views/characters/edit.html.haml
+++ b/app/views/characters/edit.html.haml
@@ -1,4 +1,4 @@
-%h1 Editing character
-
-= render 'form'
-= link_to 'Back', characters_path
+%div{class: 'w-1/3 mx-auto'}
+  %h1{class:'text-3xl my-4 text-white'}Editing character
+  = render 'form'
+  = link_to 'Back', characters_path, class: 'text-white'
