--- a/app/views/fights/show.html.haml
+++ b/app/views/fights/show.html.haml
@@ -1,9 +1,16 @@
 %div{class: 'rounded-2xl bg-gradient-to-br from-cyan-700 to-blue-800 flex flex-col justify-center items-center text-white space-y-8 p-12'}
   %div{class: 'text-7xl font-bold animate-bounce my-4'}
-    %span{class: ''}🎉
+    %span🎉
     = @fight.winner.name
     %span{class: 'text-red-500'} won!
-    %span{class: ''}🎉
+    %span🎉
+
+  - if @fight.winner
+    %div{class: 'text-xl my-2'}
+      Gained
+      %span{class: 'text-green-400'} #{FightService::XP_GAIN} XP 
+      and
+      %span{class: 'text-green-400'} #{FightService::ATTACK_POINT_GAIN} attack points!
 
   %div{class: 'w-full md:w-3/4 xl:w-1/2 bg-slate-700 p-12 rounded-lg shadow-xl space-y-4 text-center'}
     %div{class: 'text-2xl mb-4 border-b border-slate-600 pb-2'}
