--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,5 +11,5 @@
 
   %body
     = render 'shared/navbar'
-    %div{class: 'p-32 bg-slate-800 h-screen'}
+    %div{class: 'p-32 bg-slate-800 min-h-screen'}
       = yield
