--- a/app/views/shared/_navbar.html.haml
+++ b/app/views/shared/_navbar.html.haml
@@ -1,4 +1,4 @@
-%nav{class: 'bg-slate-800 p-8 shadow-lg'}
+%nav{class: 'backdrop-blur-xl bg-black/50 p-8 shadow-lg'}
   %div{class: 'container mx-auto flex justify-between items-center'}
     %div{class: 'text-white text-2xl font-semibold tracking-wider'}
       🎮 CaptainChallenge
