--- a/app/views/characters/index.html.haml
+++ b/app/views/characters/index.html.haml
@@ -1,4 +1,4 @@
-%div{class: 'bg-slate-800 min-h-screen py-8'}
+%div{class: 'backdrop-blur-xl bg-black/30 rounded-xl py-8'}
   %h1{class:'text-4xl my-4 text-white text-center'}🛡 Listing characters 🛡
 
   %div{class: 'container mx-auto flex flex-wrap justify-center items-center gap-8 my-12'}
