--- a/app/views/fights/_form.html.haml
+++ b/app/views/fights/_form.html.haml
@@ -7,21 +7,21 @@
           %li= message
 
   %div{ class: 'flex w-full justify-between items-center space-x-16 text-gray-900' }
-    %div{ class: 'bg-gradient-to-r from-emerald-500 to-emerald-300 p-10 rounded shadow-lg w-1/3 transform hover:scale-110 transition-transform' } 
+    %div{ class: 'bg-gradient-to-r from-emerald-500 to-emerald-300 p-10 rounded shadow-2xl w-1/3 transform hover:scale-110 transition-transform' } 
       = form.label :character1_id, "First Character", class: 'block text-lg font-semibold mb-3'
       = form.collection_select :character1_id, @characters, :id, :name, { prompt: "Select a character" }, class: 'w-full border rounded p-2 mb-6'
 
       = form.label :weapon1_id, "Weapon", class: 'block text-lg font-semibold mb-3'
       = form.collection_select :weapon1_id, @weapons, :id, :name, { prompt: "Select a weapon" }, class: 'w-full border rounded p-2'
 
-    %div{class: 'text-9xl font-extrabold text-white'}
+    %div{class: 'text-9xl font-extrabold text-white shadow-2xl'}
       ⚔️
 
-    %div{ class: 'bg-gradient-to-r from-fuchsia-300 to-fuchsia-500 p-10 rounded shadow-lg w-1/3 transform hover:scale-110 transition-transform' } 
+    %div{ class: 'bg-gradient-to-r from-fuchsia-300 to-fuchsia-500 p-10 rounded shadow-2xl w-1/3 transform hover:scale-110 transition-transform' } 
       = form.label :character2_id, "Second Character", class: 'block text-lg font-semibold mb-3'
       = form.collection_select :character2_id, @characters, :id, :name, { prompt: "Select a character" }, class: 'w-full border rounded p-2 mb-6'
 
       = form.label :weapon2_id, "Weapon", class: 'block text-lg font-semibold mb-3'
       = form.collection_select :weapon2_id, @weapons, :id, :name, { prompt: "Select a weapon" }, class: 'w-full border rounded p-2'
 
-  = form.submit "Fight !", class: 'bg-purple-600 hover:bg-purple-700 text-white font-bold py-6 px-24 rounded-full text-3xl mt-8 transform hover:scale-110 transition-transform'
+  = form.submit "Fight !", class: 'bg-purple-600 hover:bg-purple-700 text-white font-bold py-6 px-24 rounded-full text-3xl mt-8 transform hover:scale-110 transition-transform shadow-xl hover:shadow-2xl'
