--- a/app/views/characters/_form.html.haml
+++ b/app/views/characters/_form.html.haml
@@ -13,10 +13,15 @@
   %div{ class: 'flex flex-col space-y-2' }
     = f.label :life_points, class: 'font-semibold text-gray-200'
     = f.number_field :life_points, class: 'border rounded px-3 py-2'
+    %span.text-sm.text-gray-400
+      (Must be between 50 and 200)
 
   %div{ class: 'flex flex-col space-y-2' }
     = f.label :attack_points, class: 'font-semibold text-gray-200'
     = f.number_field :attack_points, class: 'border rounded px-3 py-2'
+    %span.text-sm.text-gray-400
+      (Must be between 5 and 50)
 
-  %div{ class: 'flex items-center justify-end' }
-    = f.submit 'Save', class: 'bg-slate-500 hover:bg-slate-900 text-white font-bold py-2 px-4 rounded'
+  %div{ class: 'flex items-center justify-between' }
+    = link_to 'Back', characters_path, class: 'text-white'
+    = f.submit 'Save', class: 'bg-gradient-to-br from-indigo-700 to-blue-600 text-white font-bold py-2 px-4 rounded'
