--- a/app/views/fights/_form.html.haml
+++ b/app/views/fights/_form.html.haml
@@ -24,4 +24,4 @@
       = form.label :weapon2_id, "Weapon", class: 'block text-lg font-semibold mb-3'
       = form.collection_select :weapon2_id, @weapons, :id, :name, { prompt: "Select a weapon" }, class: 'w-full border rounded p-2'
 
-  = form.submit "Fight !", class: 'bg-purple-600 hover:bg-purple-700 text-white font-bold py-6 px-24 rounded-full text-3xl mt-8 transform hover:scale-110 transition-transform shadow-xl hover:shadow-2xl'
+  = form.submit "Fight !", class: 'bg-gradient-to-br from-indigo-700 to-blue-600 text-white font-bold py-6 px-24 rounded-full text-3xl mt-8 transform hover:scale-110 transition-transform shadow-xl hover:shadow-2xl'
