--- a/app/views/fights/show.html.haml
+++ b/app/views/fights/show.html.haml
@@ -1,16 +1,14 @@
-%div{class: 'rounded-2xl bg-gradient-to-br from-cyan-700 to-blue-800 flex flex-col justify-center items-center text-white space-y-8 p-12'}
+%div{class: 'backdrop-blur-xl bg-black/30 rounded-xl py-8 flex flex-col justify-center items-center text-white space-y-8 p-12'}
   %div{class: 'text-7xl font-bold animate-bounce my-4'}
     %span🎉
     = @fight.winner.name
-    %span{class: 'text-red-500'} won!
+    %span{class: 'text-green-500'} is the winner!
     %span🎉
 
   - if @fight.winner
     %div{class: 'text-xl my-2'}
       Gained
       %span{class: 'text-green-400'} #{FightService::XP_GAIN} XP 
-      and
-      %span{class: 'text-green-400'} #{FightService::ATTACK_POINT_GAIN} attack points!
 
   %div{class: 'w-full md:w-3/4 xl:w-1/2 bg-slate-700 p-12 rounded-lg shadow-xl space-y-4 text-center'}
     %div{class: 'text-2xl mb-4 border-b border-slate-600 pb-2'}
@@ -35,7 +33,6 @@
       %span Winner
       = @winner ? @winner.name : "🤝 It's a tie!"
 
-%div{class: 'flex space-x-4 mt-6'}
-  = link_to 'Back to Home', root_path, class: 'bg-blue-500 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
-  = link_to 'Fight Again', new_fight_path, class: 'bg-purple-500 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
-  = link_to 'Fight History', fights_path, class: 'bg-violet-200 hover:bg-red-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105 mt-6'
+  %div{class: 'flex space-x-6 mt-6'}
+    = link_to 'Fight History', fights_path, class: 'bg-gray-200 text-indigo-700 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105'
+    = link_to 'Fight Again', new_fight_path, class: 'bg-gradient-to-br from-indigo-700 to-blue-600 px-6 py-2 rounded-lg shadow text-xl transition-transform transform hover:scale-105'
