add intro text on root, add characters/weapons to seeds.rb, remove notices from fights controller

--- a/app/views/fights/index.html.haml
+++ b/app/views/fights/index.html.haml
@@ -18,7 +18,7 @@
           %td{class: 'py-2 border-b border-gray-500 text-center'}= fight.weapon1 ? fight.weapon1.name : "🤚 No weapon"
           %td{class: 'py-2 border-b border-gray-500 text-center'}= fight.character2.name
           %td{class: 'py-2 border-b border-gray-500 text-center'}= fight.weapon2 ? fight.weapon2.name : "🤚 No weapon"
-          %td{class: 'py-2 border-b border-gray-500 text-center'}= fight.winner ? fight.winner.name : "🤝 It's a tie!"
+          %td{class: 'py-2 border-b border-gray-500 text-center'}= fight.winner.name
 
 %div{class: 'mt-6'}
   = link_to 'Back to Home', root_path, class: 'text-xl bg-gradient-to-r from-indigo-700 to-blue-600 text-white px-6 py-2 rounded-full shadow-lg hover:from-blue-600 hover:to-indigo-700 transition duration-300'
